feat: Add GHC and Cabal installation to sync-darcs workflow
The changes in this commit add the installation of GHC and Cabal to the
sync-darcs GitHub Actions workflow. This is necessary to enable the
installation of the Darcs version control system, which is required for
the workflow to function correctly.

--- a/.github/workflows/sync-darcs.yml
+++ b/.github/workflows/sync-darcs.yml
@@ -16,10 +16,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install Darcs
+      - name: Install GHC and Cabal
         run: |
           sudo apt-get update
-          sudo apt-get install -y darcs
+          sudo apt-get install -y ghc cabal-install
+
+      - name: Install Darcs
+        run: |
+          cabal update
+          cabal install darcs
+          echo "$HOME/.cabal/bin" >> $GITHUB_PATH
 
       - name: Configure Git
         run: |
