--- a/.github/workflows/sync-darcs.yml
+++ b/.github/workflows/sync-darcs.yml
@@ -21,11 +21,17 @@ jobs:
           echo "Installing Darcs following official methods from darcs.net..."
           
           # Method 1: Install using Stack (preferred method according to darcs.net)
-          echo "Installing Stack..."
-          curl -sSL https://get.haskellstack.org/ | sh
+          echo "Checking if Stack is installed..."
+          if ! command -v stack &> /dev/null; then
+            echo "Installing Stack..."
+            curl -sSL https://get.haskellstack.org/ | sh -s - -f
+          else
+            echo "Stack is already installed"
+            stack --version
+          fi
           
           echo "Installing Darcs with Stack..."
-          stack install darcs
+          stack install darcs || echo "Stack install encountered an issue, will try with Cabal next"
           export PATH="$HOME/.local/bin:$PATH"
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           
@@ -63,7 +69,26 @@ jobs:
 
       - name: Pull from Darcs
         run: |
-          darcs pull --all
+          # Check if there's a _darcs directory already
+          if [ ! -d "_darcs" ]; then
+            echo "No _darcs directory found. Initializing a new darcs repository..."
+            darcs initialize
+            
+            # You need to set the correct repository URL here
+            # Replace 'http://darcs-repo-url' with your actual Darcs repository URL
+            DARCS_REPO="http://basilisk.fr/basilisk"
+            
+            echo "Getting from Darcs repository: $DARCS_REPO"
+            darcs get --lazy "$DARCS_REPO" temp_repo
+            
+            # Move contents while preserving darcs metadata
+            mv temp_repo/_darcs .
+            mv temp_repo/* .
+            rm -rf temp_repo
+          else
+            echo "_darcs directory found. Pulling changes..."
+            darcs pull --all
+          fi
           
       - name: Check for changes
         id: check_changes
