--- a/.github/workflows/sync-darcs-main.yml
+++ b/.github/workflows/sync-darcs-main.yml
@@ -1,4 +1,4 @@
-name: Sync from Darcs
+name: Sync Darcs to @basilisk-source
 
 on:
   schedule:
@@ -67,41 +67,52 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
 
-      - name: Pull from Darcs
+      - name: Pull from Darcs into @basilisk-source
         run: |
-          # Check if there's a _darcs directory already
-          if [ ! -d "_darcs" ]; then
-            echo "No _darcs directory found. Initializing a new darcs repository..."
-            darcs initialize
+          TARGET_DIR="@basilisk-source"
+          mkdir -p "$TARGET_DIR"
+
+          # Check if there's a _darcs directory inside the target directory
+          if [ ! -d "$TARGET_DIR/_darcs" ]; then
+            echo "No _darcs directory found in $TARGET_DIR. Initializing Darcs repository..."
             
-            # You need to set the correct repository URL here
-            # Replace 'http://darcs-repo-url' with your actual Darcs repository URL
+            # Set the Darcs repository URL
             DARCS_REPO="http://basilisk.fr/basilisk"
             
             echo "Getting from Darcs repository: $DARCS_REPO"
             darcs get --lazy "$DARCS_REPO" temp_repo
             
-            # Move contents while preserving darcs metadata
-            mv temp_repo/_darcs .
-            mv temp_repo/* .
+            # Move Darcs metadata and contents into the target directory
+            echo "Moving Darcs metadata to $TARGET_DIR/_darcs"
+            mv temp_repo/_darcs "$TARGET_DIR/"
+            echo "Moving repository contents to $TARGET_DIR"
+            shopt -s dotglob # Enable matching hidden files
+            mv temp_repo/* "$TARGET_DIR/"
+            shopt -u dotglob # Disable matching hidden files
             rm -rf temp_repo
+            echo "Initialization complete."
           else
-            echo "_darcs directory found. Pulling changes..."
+            echo "_darcs directory found in $TARGET_DIR. Pulling changes..."
+            cd "$TARGET_DIR"
             darcs pull --all
+            cd ..
+            echo "Pull complete."
           fi
           
-      - name: Check for changes
+      - name: Check for changes in @basilisk-source
         id: check_changes
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
+          if [[ -n "$(git status --porcelain @basilisk-source)" ]]; then
             echo "changes=true" >> $GITHUB_OUTPUT
+            echo "Changes detected in @basilisk-source."
           else
             echo "changes=false" >> $GITHUB_OUTPUT
+            echo "No changes detected in @basilisk-source."
           fi
 
       - name: Commit and push if changes exist
         if: steps.check_changes.outputs.changes == 'true'
         run: |
-          git add -A
-          git commit -m "Auto-update from Darcs repository"
+          git add @basilisk-source
+          git commit -m "Auto-update @basilisk-source from Darcs repository"
           git push 
