--- a/.github/workflows/sync-darcs-repositories.yml
+++ b/.github/workflows/sync-darcs-repositories.yml
@@ -15,36 +15,40 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Install Darcs via apt
-        id: install_darcs_apt
-        continue-on-error: true
+          
+      - name: Set up Haskell
+        uses: haskell-actions/setup@v2
+        with:
+          ghc-version: '9.2'
+          cabal-version: 'latest'
+          enable-stack: true
+          stack-no-global: true
+          
+      - name: Install Darcs
         run: |
-          echo "Attempting to install Darcs via apt..."
-          sudo apt-get update
-          sudo apt-get install -y darcs
-          darcs --version && echo "darcs_installed=true" >> $GITHUB_OUTPUT || echo "darcs_installed=false" >> $GITHUB_OUTPUT
-
-      - name: Install Darcs via Stack
-        if: steps.install_darcs_apt.outputs.darcs_installed != 'true'
-        run: |
-          echo "Installing Darcs via Stack..."
-          # Install Stack
-          curl -sSL https://get.haskellstack.org/ | sh
-
-          # Install Darcs with Stack
-          stack install darcs
-
-          export PATH="$HOME/.local/bin:$PATH"
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
+          echo "Installing Darcs via Cabal..."
+          cabal update
+          cabal install --overwrite-policy=always --install-method=copy darcs
+          echo "$HOME/.cabal/bin" >> $GITHUB_PATH
+          export PATH="$HOME/.cabal/bin:$PATH"
+          
           # Verify installation
           if command -v darcs &> /dev/null; then
-            echo "Darcs installed successfully via Stack"
+            echo "Darcs installed successfully"
             darcs --version
           else
-            echo "Failed to install Darcs with Stack. Exiting."
-            exit 1
+            echo "Failed to install Darcs. Trying alternative method..."
+            stack install darcs
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
+            export PATH="$HOME/.local/bin:$PATH"
+            
+            if command -v darcs &> /dev/null; then
+              echo "Darcs installed successfully via Stack"
+              darcs --version
+            else
+              echo "All Darcs installation methods failed. Exiting."
+              exit 1
+            fi
           fi
 
       - name: Configure Git
